--- a/Unsupervised_Learning_and_Customer_Segmentation.ipynb
+++ b/Unsupervised_Learning_and_Customer_Segmentation.ipynb
@@ -3157,7 +3157,12 @@
         "\n",
         "Cluster 0 and Cluster 2, with lower income and credit card spending, may have individuals with a lower creditworthiness on average and may have a comparatively lower chance of obtaining a Personal Loan.\n",
         "\n",
-        "Please note that these are general assumptions based on the available data. To make a more accurate assessment of Personal Loan eligibility, additional factors such as credit scores, employment status, and loan history would be needed."
+        "Please note that these are general assumptions based on the available data. To make a more accurate assessment of Personal Loan eligibility, additional factors such as credit scores, employment status, and loan history would be needed.\n",
+        "\n",
+        "In this activity, we helped the bank identify high-potential segments from its\n",
+        "existing customer base that may respond well to marketing campaigns. We\n",
+        "achieved this by performing machine learning-based customer segmentation\n",
+        "and included various customer variables in the model."
       ],
       "metadata": {
         "id": "RFbzWWElB-oJ"
