--- a/Marketing_Performing_Multiclass_Classification_and_Evaluating_Performance.ipynb
+++ b/Marketing_Performing_Multiclass_Classification_and_Evaluating_Performance.ipynb
@@ -1092,6 +1092,40 @@
         "plt.xlabel('Predicted Values')\n",
         "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The confusion matrix results above are the details the performance of a classification model across four categories: Retail, Roadshow, SocialMedia, and Television. In a confusion matrix, each column represents the predicted classes, and each row represents the actual classes (true values). The diagonal from top left to bottom right shows the number of correct predictions for each class. Here's a breakdown of the matrix:\n",
+        "\n",
+        "- Retail:\n",
+        "  + True Positive (correctly predicted Retail): 899\n",
+        "  + False Negative (Retail misclassified as something else): 51 (Roadshow) + 21 (SocialMedia) + 30 (Television) = 102\n",
+        "  + False Positive (Other categories misclassified as Retail): 38 (Roadshow) + 36 (SocialMedia) + 28 (Television) = 102\n",
+        "- Roadshow:\n",
+        "  + True Positive (correctly predicted Roadshow): 857\n",
+        "  + False Negative (Roadshow misclassified as something else): 38 (Retail) + 26 (SocialMedia) + 79 (Television) = 143\n",
+        "  + False Positive (Other categories misclassified as Roadshow): 51 (Retail) + 26 (SocialMedia) + 65 (Television) = 142\n",
+        "- SocialMedia:\n",
+        "  + True Positive (correctly predicted SocialMedia): 911\n",
+        "  + False Negative (SocialMedia misclassified as something else): 36 (Retail) + 26 (Roadshow) + 25 (Television) = 87\n",
+        "  + False Positive (Other categories misclassified as SocialMedia): 21 (Retail) + 26 (Roadshow) + 21 (Television) = 68\n",
+        "- Television:\n",
+        "  + True Positive (correctly predicted Television): 887\n",
+        "  + False Negative (Television misclassified as something else): 28 (Retail) + 65 (Roadshow) + 21 (SocialMedia) = 114\n",
+        "  + False Positive (Other categories misclassified as Television): 30 (Retail) + 79 (Roadshow) + 25 (SocialMedia) = 134\n",
+        "- Interpreting the above information:\n",
+        "\n",
+        "  + Retail had a fairly high number of true positives, indicating good precision. However, it had an equal number of false positives and negatives, showing some confusion with other categories.\n",
+        "  + Roadshow had a significant number of true positives, but also a relatively high number of false negatives, particularly with Television, indicating some misclassifications between these two categories.\n",
+        "  + SocialMedia had the highest number of true positives and the lowest combined number of false positives and negatives, indicating it was the most accurately predicted category.\n",
+        "  + Television had a good number of true positives, but there's noticeable confusion with Roadshow, as seen in both the false negatives and positives.\n",
+        "\n",
+        "Overall, the model seems to have the best predictive power with the SocialMedia category and shows some confusion between the Roadshow and Television categories. This matrix can be used to refine the model further by investigating why certain misclassifications are happening and possibly providing the model with more discriminating features or more data to learn from."
+      ],
+      "metadata": {
+        "id": "_CLSIUiZpd_w"
+      }
     }
   ],
   "metadata": {
